<resources>
    <string name="app_name">Movie Tracker</string>
    <string name="action_settings">Settings</string>

    <!--strings for SettingActivity-->
    <string name="settings_activity_lable">Settings</string>

    <!--strings for CheckBoxPreference show_revenue-->
    <string name="pref_show_revenue_key" translatable="false">show_revenue</string>
    <string name="pref_show_revenue_title">Show Revenue</string>
    <string name="pref_show_revenue_summary_on">Shown</string>
    <string name="pref_show_revenue_summary_off">Hidden</string>

    <!--strings for ListPreference rank_text_color-->
    <!--lable for entire preference-->
    <string name="pref_rank_text_color_lable">Rank Text Color</string>
    <!--the labels for each of the values-->
    <string name="pref_text_color_lable_black">Black</string>
    <string name="pref_text_color_lable_red">Red</string>
    <string name="pref_text_color_lable_green">Green</string>
    <!--key for rank_text_color preference-->
    <string name="pref_rank_text_color_key" translatable="false">rank_text_color</string>
    <!--values for text_rank_color preference-->
    <string name="pref_color_black_value" translatable="false">black</string>
    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_green_value" translatable="false">green</string>

    <!--strings for EditTextPreference revenue_text_size-->
    <string name="pref_revenue_text_size_label">Revenue Text Size</string>
    <string name="pref_revenue_text_size_key" translatable="false">revenue_text_size</string>
    <string name="pref_revenue_text_size_default_value" translatable="false">18</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_movies">Home</string>
    <string name="nav_movie">Movies</string>
    <string name="nav_rated">Rated</string>
    <string name="nav_watched">Watched</string>
    <string name="nav_shows">TV</string>
    <string name="nav_people">People</string>
    <string name="nav_my_lists">My Lists</string>
    <string name="nav_box_office">Box Office</string>
    <string name="nav_popular">Popular</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Movies</item>
        <item>TV Show</item>
        <item>People</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="error_message">Failed to get results. Please try again.</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_Share">Share</string>

    <string name="box_office_notification_title">Movie Tracker - Box Office Top Movie</string>
    <string name="box_office_notification_channel_name">Box Office</string>

</resources>
